# delivery

./: .gitignore  LICENSE  README.md  check.py  pyproject.toml
backend/: Dockerfile  pyproject.toml
backend/api/: filters.py  permissions.py  serializers.py  urls.py  views.py
backend/data/: ingredients.csv
backend/delivery/: settings.py  wsgi.py
backend/delivery/delivery/: settings.py
backend/dish/: admin.py  apps.py  models.py
backend/dish/management/commands/: add_ingredients.py  add_ingredients_types.py
backend/dish/migrations/: 0001_initial.py  0002_alter_orderdish_unique_together_and_more.py  0002_initial.py
backend/user/: admin.py  models.py
backend/user/migrations/: 0001_initial.py
data/: types.csv
frontend/: Dockerfile  package-lock.json
frontend/src/: index.html
frontend/src/js/: script.js
frontend/src/mailer/: smart.php
frontend/src/sass/: style.scss
frontend/src/sass/base/: _animation.scss  _variables.scss
frontend/src/sass/blocks/: _buttons.scss  _carousel.scss  _header.scss  _nav.scss  _promo.scss
infra/: docker-compose.yml  nginx.conf
